<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrefixChoice">

    <RadioGroup
        android:id="@+id/rg_international"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/it_prefix" />

        <RadioButton
            android:id="@+id/de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de_prefix" />

        <RadioButton
            android:id="@+id/fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_prefix" />
    </RadioGroup>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="145dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/rg_international"
        app:layout_constraintStart_toEndOf="@+id/rg_international"
        app:layout_constraintTop_toTopOf="@+id/rg_international">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_it"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:text="@string/italy" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_de"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:text="@string/germany" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_fr"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:text="@string/france" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/add_prefix_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClickPrefix"
        android:text="@string/add_prefix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_international" />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_prefix_button"
        android:onClick="wiki"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>