<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternationalCall">

    <TextView
        android:id="@+id/prefix"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/number"
        app:layout_constraintEnd_toStartOf="@+id/choose_another"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/date/ddmmyy" />

    <Button
        android:id="@+id/choose_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="84dp"
        android:onClick="chooseAnotherPrefix"
        android:text="@string/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:autoSizeTextType="uniform"
        android:autofillHints="@string/hint"
        android:gravity="center|start"
        android:hint="@string/hint"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefix" />

    <Button
        android:id="@+id/compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:autoSizeTextType="uniform"
        android:onClick="compose"
        android:text="@string/compose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/call2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:autoSizeTextType="uniform"
        android:onClick="makeInternationalCall"
        android:text="@string/call2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compose" />

    <Button
        android:id="@+id/sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:autoSizeTextType="uniform"
        android:onClick="chooseSOS"
        android:text="@string/sos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call2" />

</androidx.constraintlayout.widget.ConstraintLayout>